[vxb-improvements-5] Improve navigation buttons (#167)

--- a/views/landing.html
+++ b/views/landing.html
@@ -30,7 +30,8 @@
             <span class="subBrand"> Voxbone WebRTC Beta</span>
           </div>
           <div class="pull-right">
-            <a class="login withripple" href="/login">Login</a>
+            <a class="login user-pill pull-left" href="/login">Login</a>
+            <a class="login user-pill pull-left" href="/account/signup">Create account</a>
           </div>
         </nav>
       </div>
