--- a/views/layout.jade
+++ b/views/layout.jade
@@ -72,7 +72,9 @@ html(lang='en')
             a.login.pull-left.user-pill(href="/account/edit") Profile
             a.login.withripple.pull-left(href="/logout") Logout
           else
-            a.login.withripple(href="/login") Login
+            block default_nav
+              a.login.user-pill.pull-left(href="/login") Login
+              a.login.user-pill.pull-left(href="/account/signup") Create account
 
     block content
 
