--- a/views/landing.html
+++ b/views/landing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Voxbone | WebRtc Beta</title>
+    <title>Voxbone | WebRTC Click-to-Call</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
         <nav class="navbar">
           <div class="navbar-header">
             <a class="navbar-brand" href="#" style="background-image: url(https://click2vox-com-staging.herokuapp.com/images/navbar-brand.png)"></a>
-            <span class="subBrand"> Voxbone WebRTC Beta</span>
+            <span class="subBrand"> Click2Vox<sup>&beta;</sup></span>
           </div>
           <div class="pull-right">
             <a class="login user-pill pull-left" href="/login">Login</a>
@@ -37,7 +37,7 @@
       </div>
 
       <div class="call-to-action">
-        <span>Allow customers to call you straight from <em>your website.</em></span>
+        <span><em>HD calling straight from any website.</em></span>
         <br>
         <span class="block">No installs needed</span>
         <br>
@@ -50,8 +50,9 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-xs-offset-1">
-            <p>Welcome to voxbone’s click to call. Voxbone is the market leader in providing virtual local phone numbers (often referred to as inbound SIP trunks, or DID numbers). If you don’t already have a SIP <a href="#">learn how to get started here.</a></p>
-            <p>This service will allow you to create and customize call buttons that can be embedded in your webpage and will allow users to call your virtual Local Phone Number with no installs.</p>
+            <p>Welcome to Voxbone’s cloud-based click-to-call service. Create a click-to-call button that connects any webpage to any of your SIP addresses in seconds.</p>
+            <p>No app or plug-in installs for your customers. No complex gateway installs or phone system configuration for you.</p>
+            <p>Need to pass information from the webpage to your PBX or navigate an IVR - we have you covered.</p>
             <div class="row">
               <div class="col-xs-12 col-sm-4">
                 <div class="screen-shot-holder">
@@ -62,13 +63,13 @@
               <div class="col-xs-12 col-sm-4">
                 <div class="screen-shot-holder">
                   <img src="../images/screenshot-add-number.png">
-                  <span>Add your the call's Virtual Local Phone Number</span>
+                  <span>Add a SIP address & place a test call</span>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-4">
                 <div class="screen-shot-holder">
                   <img src="../images/screenshot-embed-code.png">
-                  <span>Embed the code in your webpage</span>
+                  <span>Paste the code in your webpage</span>
                 </div>
               </div>
             </div>
@@ -82,9 +83,9 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-xs-offset-1">
-            <span>Want to test how this would work?</span><br>
+            <span>Want to try it now?</span><br>
             <a href="/widget/demo" class="btn btn-info">Create a sample call button</a>
-            <a href="#" class="btn btn btn-purple">Call Us</a>
+            <a href="#" class="btn btn btn-purple">click2vox Us</a>
           </div>
         </div>
       </div>
