--- a/views/widget/demo.jade
+++ b/views/widget/demo.jade
@@ -39,7 +39,7 @@ block content
       .container
         .row
           .col-xs-12
-            h1 Demo WebRTC Call Button
+            h1 Demo WebRTC Click-to-Call Button
             p #[b Questions?] #[a(href="https://docs.google.com/document/d/1L6swwK_rVu_2XqSNMzmMRxBxL3YL50YTzkF6NaqeLqU/edit?usp=sharing" target="_blank") See our Frequently Asked Questions document.]
 
     .body(ng-controller="WidgetDemoController")
