--- a/views/signup.jade
+++ b/views/signup.jade
@@ -169,7 +169,7 @@ block content
 
                   .form-group
                     label.control-label
-                      span You must #[a(href="#{process.env.APP_URL}/docs/click2vox-aup.docx") Accept our  User Policy]
+                      span You must accept our #[a(href="#{process.env.APP_URL}/docs/click2vox-aup.docx") User Policy]
                       span &nbsp;
                       input(type="checkbox" id="uaup" name="uaup" ng-model="account.uaup" required)
 
