--- a/views/sip/new.jade
+++ b/views/sip/new.jade
@@ -59,7 +59,7 @@ block content
                       div.ng-cloak(ng-show="sip_form.sip_uri.$error.notallowed") SIP URI not allowed
                       div.ng-cloak(ng-show="errorMessage") {{errorMessage}}
 
-                  .form-group
+                  .form-group(ng-cloak)
                     button.btn.btn-purple.save-sip(ng-disabled="sip_form.$invalid || onSubmitting" ng-click="saveSipURI(sip_form)" data-loading-text="Loading..." name="submitBtn") {{submitText}}
                     button.btn.btn-success.pull-right.skip-sip(ng-click="skipURI('#{process.env.APP_URL}/widget/new')"
                     name="submitBtn") {{skipText}}
