--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -82,3 +82,19 @@ pre {
 
 /* adding this to prevent showing hidden tags while requirejs does its work*/
 [ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}
+
+
+.noselect{
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently
+                                    not supported by any browser */
+}
+
+.inactive{
+  pointer-events: none;
+  cursor: default;
+}
