landing page update

--- a/public/stylesheets/less/colors.less
+++ b/public/stylesheets/less/colors.less
@@ -1,6 +1,7 @@
 /* ===== Color Setup ===== */
 
 @main-bg:         #eef2f5;
+@main-bg-light:   #E6EFF5;
 @contenttext:     #343c3e;
 @subText:         #58646e;
 @vx-purple:       #781e75; 
