--- a/views/landing.html
+++ b/views/landing.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="call-to-action">
-        <span><em>HD calling straight from any website.</em></span>
+        <span>HD calling straight from any website.</span>
         <br>
         <span class="block">No installs needed</span>
         <br>
@@ -76,7 +76,18 @@
           </div>
         </div>
       </div>
-
+    </div>
+    
+    <div class="landing-main white">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-10 col-xs-offset-1">
+            <div class="screen-shot-holder-large">
+              <img src="../images/flow-diagram.png">
+            </div>
+          </div>
+        </div>
+      </div>    
     </div>
 
     <div class="landing-footer">
