--- a/public/stylesheets/less/landingPage.less
+++ b/public/stylesheets/less/landingPage.less
@@ -63,6 +63,11 @@
   a {
     text-decoration: underline;
   }
+  
+  &.white {
+    background: @main-bg-light;
+  }
+  
 }
 
 .landing-footer {
@@ -110,4 +115,16 @@
     font-weight: 300;
   }
   
+}
+
+.screen-shot-holder-large{
+  text-align: center;
+  padding: 0 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  
+  img {
+    width: 100%;
+    max-width: 500px;
+  }
 }
