--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,8 +19,8 @@ html(lang='en')
     link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
     script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js" async)
-    script(src="//webrtc.voxbone.com/js/jssip-latest.js")
-    script(src="//webrtc.voxbone.com/js/voxbone-latest.js" async)
+    script(src="/javascripts/jssip-latest.js")
+    script(src="/javascripts/voxbone-latest.js" async)
 
     //- load requirejs and its config
     script(src="/lib/requirejs/require.js")
