[MISC] minor css cleanup

--- a/public/stylesheets/less/vxb-button.less
+++ b/public/stylesheets/less/vxb-button.less
@@ -119,6 +119,8 @@
   }
 }
 .widget-box {
+  max-width: 200px;
+  max-height: 200px;
   -moz-border-radius:6px;
   -webkit-border-radius:6px;
   border-radius:6px;
